# cambai-python

./: .gitignore  .pylintrc  README.md  pyproject.toml  quickstart_dubbing.py  quickstart_tts.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: publish.yml  pylint.yml
camb_ai_pip/: __init__.py  camb_client.py
cambai/: __init__.py
examples/: dubbing.ipynb  text-to-speech.ipynb  transcription.ipynb  translation.ipynb
tests/: test_camb_wrapper.py
