[tool.poetry]
name = "cambai"
version = "0.1.2"
description = "Camb AI API Python Library"
authors = ["Chandrashekhar R <hi.cskhere@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cr2007/cambai"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.2"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
rich = "^13.7.1"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
pytest = "^8.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tts = "quickstart_tts:main"
dub = "quickstart_dubbing:main"
test = "test:main"
